k8s/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: conferenceattendeesapi
    namespace: cloud-native-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: conferenceattendeesapi
    spec:
      containers:
      - name: conferenceattendeesapi
        image: trevoirwilliams/conferenceattendees-api:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: conferenceattendeesapi
---
apiVersion: v1
kind: Service
metadata:
  name: conferenceattendeesapi-svc
  namespace: cloud-native-dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32001
  selector:
    app: conferenceattendeesapi
