k8s/mvc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conferenceattendeesmvc
  namespace: cloud-native-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conferenceattendeesmvc
  template:
    metadata:
      labels:
        app: conferenceattendeesmvc
    spec:
      containers:
      - name: conferenceattendeesmvc
        image: trevoirwilliams/conferenceattendees-mvc:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: conferenceattendeesmvc-svc
  namespace: cloud-native-dev
spec:
  selector:
    app: conferenceattendeesmvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32002
  type: NodePort
